--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,28 +82,10 @@
 					</header>
 					<div class="filter-content">
 						<div class="card-body">
-							<div class="custom-control custom-checkbox">
+							<div class="custom-control custom-checkbox" *ngFor="let country of countries">
 								<span class="float-right badge badge-light round">52</span>
 								<input type="checkbox" class="custom-control-input" id="Check1">
-								<label class="custom-control-label" for="Check1">Samsung</label>
-							</div> <!-- form-check.// -->
-
-							<div class="custom-control custom-checkbox">
-								<span class="float-right badge badge-light round">132</span>
-								<input type="checkbox" class="custom-control-input" id="Check2">
-								<label class="custom-control-label" for="Check2">Black berry</label>
-							</div> <!-- form-check.// -->
-
-							<div class="custom-control custom-checkbox">
-								<span class="float-right badge badge-light round">17</span>
-								<input type="checkbox" class="custom-control-input" id="Check3">
-								<label class="custom-control-label" for="Check3">Samsung</label>
-							</div> <!-- form-check.// -->
-
-							<div class="custom-control custom-checkbox">
-								<span class="float-right badge badge-light round">7</span>
-								<input type="checkbox" class="custom-control-input" id="Check4">
-								<label class="custom-control-label" for="Check4">Other Brand</label>
+								<label class="custom-control-label" for="Check1">{{country.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
 					</div>
