--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
 				</article> <!-- card-group-item.// -->
 				<article class="card-group-item">
 					<header class="card-header">
-						<h6 class="title">Selection </h6>
+						<h6 class="title">Country</h6>
 					</header>
 					<div class="filter-content">
 						<div class="card-body">
@@ -86,6 +86,34 @@
 								<span class="float-right badge badge-light round">52</span>
 								<input type="checkbox" class="custom-control-input" id="Check1" [(ngModel)]="searchText" (change)="toggleVisibility($event)" />
 								<label class="custom-control-label" for="Check1">{{country.Name}}</label>
+							</div> <!-- form-check.// -->
+						</div> <!-- card-body.// -->
+					</div>
+				</article> <!-- card-group-item.// -->
+				<article class="card-group-item">
+					<header class="card-header">
+						<h6 class="title">State</h6>
+					</header>
+					<div class="filter-content">
+						<div class="card-body">
+							<div class="custom-control custom-checkbox" *ngFor="let state of states">
+								<span class="float-right badge badge-light round">52</span>
+								<input type="checkbox" class="custom-control-input" id="Check1" [(ngModel)]="searchText" (change)="toggleVisibility($event)" />
+								<label class="custom-control-label" for="Check1">{{state.Name}}</label>
+							</div> <!-- form-check.// -->
+						</div> <!-- card-body.// -->
+					</div>
+				</article> <!-- card-group-item.// -->
+        <article class="card-group-item">
+					<header class="card-header">
+						<h6 class="title">City</h6>
+					</header>
+					<div class="filter-content">
+						<div class="card-body">
+							<div class="custom-control custom-checkbox" *ngFor="let city of cities">
+								<span class="float-right badge badge-light round">52</span>
+								<input type="checkbox" class="custom-control-input" id="Check1" [(ngModel)]="searchText" (change)="toggleVisibility($event)" />
+								<label class="custom-control-label" for="Check1">{{city.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
 					</div>
