--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,10 +78,11 @@
 				</article> <!-- card-group-item.// -->
 				<article class="card-group-item">
 					<header class="card-header">
+            <input type="hidden" style="display:none" [(ngModel)]="searchText" />
 						<h6 class="title">Country</h6>
 					</header>
 					<div class="filter-content">
-            <input type="hidden" style="display:none" [(ngModel)]="searchText.Country" />
+            
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let country of countries">
 								<span class="float-right badge badge-light round">52</span>
@@ -96,7 +97,6 @@
 						<h6 class="title">State</h6>
 					</header>
 					<div class="filter-content">
-            <input type="hidden" style="display:none" [(ngModel)]="searchText.State" />
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let state of states">
 								<span class="float-right badge badge-light round">52</span>
@@ -111,7 +111,6 @@
 						<h6 class="title">City</h6>
 					</header>
 					<div class="filter-content">
-            <input type="hidden" style="display:none" [(ngModel)]="searchText.City" />
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let city of cities">
 								<span class="float-right badge badge-light round">52</span>
