--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -12,4 +12,7 @@
       </tr>
     </table>
   </div>
+  <div class="card-footer">
+    	<a class="btn btn-primary" routerLink="['/registerproperty',property]">Smart Real Estate Portal</a>
+  </div>
 </div>
