--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -13,6 +13,6 @@
     </table>
   </div>
   <div class="card-footer">
-    	<a class="btn btn-primary" routerLink="['/registerproperty',property]">Smart Real Estate Portal</a>
+    	<a class="btn btn-primary" routerLink="['/registerproperty',property.ID]">Ed</a>
   </div>
 </div>
