--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -19,8 +19,22 @@
 								<div *ngIf="f.Description.errors.required">Description is required</div>
 							</div>
 						</div>
+            <div class="form-group">
+							<label for="Description">Address</label>
+							<input type="text" formControlName="Address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Address.errors }" />
+							<div *ngIf="submitted && f.Address.errors" class="invalid-feedback">
+								<div *ngIf="f.Address.errors.required">Address is required</div>
+							</div>
+						</div>
+            <div class="form-group">
+							<label for="No_Of_BedRooms">No. of Living Rooms</label>
+							<input type="number" formControlName="No_Of_LivingRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_LivingRooms.errors }" />
+							<div *ngIf="submitted && f.No_Of_LivingRooms.errors" class="invalid-feedback">
+								<div *ngIf="f.No_Of_LivingRooms.errors.required">No. of Living Rooms is required</div>
+							</div>
+						</div>
 						<div class="form-group">
-							<label for="No_Of_BedRooms">No. of BedRooms</label>
+							<label for="No_Of_BedRooms">No. of Bed Rooms</label>
 							<input type="number" formControlName="No_Of_BedRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BedRooms.errors }" />
 							<div *ngIf="submitted && f.No_Of_BedRooms.errors" class="invalid-feedback">
 								<div *ngIf="f.No_Of_BedRooms.errors.required">No. of BedRooms is required</div>
