--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -27,6 +27,13 @@
 							</div>
 						</div>
             <div class="form-group">
+							<label for="No_Of_BedRooms">Area Sq Foot</label>
+							<input type="number" formControlName="AreaSqFt" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.AreaSqFt.errors }" />
+							<div *ngIf="submitted && f.AreaSqFt.errors" class="invalid-feedback">
+								<div *ngIf="f.AreaSqFt.errors.required">Area Sq Foot is required</div>
+							</div>
+						</div>
+            <div class="form-group">
 							<label for="No_Of_BedRooms">No. of Living Rooms</label>
 							<input type="number" formControlName="No_Of_LivingRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_LivingRooms.errors }" />
 							<div *ngIf="submitted && f.No_Of_LivingRooms.errors" class="invalid-feedback">
@@ -102,6 +109,16 @@
 
 							<div *ngIf="submitted && f.Property_Status.errors" class="invalid-feedback">
 								<div *ngIf="f.Property_Status.errors.required">Property Status is required</div>
+							</div>
+						</div>
+            <div class="form-group">
+							<label for="Property_Status">Property Purpose</label>
+							<select formControlName="Property_Purpose" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Property_Purpose.errors }">
+               <option *ngFor="let status of propertystatus" value={{status.ID}}>{{status.Name}}</option>
+              </select>
+
+							<div *ngIf="submitted && f.Property_Purpose.errors" class="invalid-feedback">
+								<div *ngIf="f.Property_Purpose.errors.required">Property Purpose is required</div>
 							</div>
 						</div>
 						<div class="form-group">
