--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -121,6 +121,13 @@
 								<div *ngIf="f.Property_Purpose.errors.required">Property Purpose is required</div>
 							</div>
 						</div>
+            <div class="form-group">
+							<label for="No_Of_BedRooms">Price</label>
+							<input type="number" formControlName="Price" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Price.errors }" />
+							<div *ngIf="submitted && f.Price.errors" class="invalid-feedback">
+								<div *ngIf="f.Price.errors.required">Price is required</div>
+							</div>
+						</div>
 						<div class="form-group">
 							<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
