--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -128,7 +128,7 @@
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let type of propertytype">
 								<span class="float-right badge badge-light round">52</span>
-								<input type="checkbox" class="custom-control-input" [id]="type.Name" (change)="toggleVisibility($event,type.ID,'PropertyType')" />
+								<input type="checkbox" class="custom-control-input" [id]="type.Name" (change)="toggleVisibility($event,type.ID,'Property_Type')" />
 								<label class="custom-control-label" [for]="type.Name">{{type.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
@@ -142,7 +142,7 @@
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let status of propertystatus">
 								<span class="float-right badge badge-light round">52</span>
-								<input type="checkbox" class="custom-control-input" [id]="status.Name" (change)="toggleVisibility($event,status.ID,'PropertyStatus')" />
+								<input type="checkbox" class="custom-control-input" [id]="status.Name" (change)="toggleVisibility($event,status.ID,'Property_Status')" />
 								<label class="custom-control-label" [for]="status.Name">{{status.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
