--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,46 +16,6 @@
 <div class="container">
 	<div class="row mt-4">
 		<div class="col-sm-4">
-			<div class="card mb-2">
-				<article class="card-group-item">
-					<header class="card-header">
-						<h6 class="title">Similar category </h6>
-					</header>
-					<div class="filter-content">
-						<div class="list-group list-group-flush">
-							<a href="#" class="list-group-item">Cras justo odio
-								<span class="float-right badge badge-light round">142</span> </a>
-							<a href="#" class="list-group-item">Dapibus ac facilisis
-								<span class="float-right badge badge-light round">3</span> </a>
-							<a href="#" class="list-group-item">Morbi leo risus
-								<span class="float-right badge badge-light round">32</span> </a>
-							<a href="#" class="list-group-item">Another item
-								<span class="float-right badge badge-light round">12</span> </a>
-						</div> <!-- list-group .// -->
-					</div>
-				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
-					<header class="card-header">
-						<h6 class="title">Color check</h6>
-					</header>
-					<div class="filter-content">
-						<div class="card-body">
-							<label class="btn btn-danger">
-				  <input class="" type="checkbox" name="myradio" value="">
-				  <span class="form-check-label">Red</span>
-				</label>
-							<label class="btn btn-success">
-				  <input class="" type="checkbox" name="myradio" value="">
-				  <span class="form-check-label">Green</span>
-				</label>
-							<label class="btn btn-primary">
-				  <input class="" type="checkbox" name="myradio" value="">
-				  <span class="form-check-label">Blue</span>
-				</label>
-						</div> <!-- card-body.// -->
-					</div>
-				</article> <!-- card-group-item.// -->
-			</div> <!-- card.// -->
 			<div class="card ">
 				<article class="card-group-item">
 					<header class="card-header">
@@ -76,7 +36,7 @@
 								</div> <!-- card-body.// -->
 							</div>
 				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
+				<article class="card-group-item mb-2">
 					<header class="card-header">
 						<input type="text" style="display:none"  [(ngModel)]="searchText" />
 						<h6 class="title">Country</h6>
@@ -92,7 +52,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
+				<article class="card-group-item mb-2">
 					<header class="card-header">
 						<h6 class="title">State</h6>
 					</header>
@@ -106,7 +66,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
+				<article class="card-group-item mb-2">
 					<header class="card-header">
 						<h6 class="title">City</h6>
 					</header>
@@ -120,7 +80,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
+				<article class="card-group-item mb-2">
 					<header class="card-header">
 						<h6 class="title">Property Type</h6>
 					</header>
@@ -134,7 +94,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-				<article class="card-group-item">
+				<article class="card-group-item ">
 					<header class="card-header">
 						<h6 class="title">Property Type</h6>
 					</header>
