--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,16 +20,17 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact</a>
 				</li>
-        <li class="nav-item">
+				<li class="nav-item">
 					<a class="nav-link" routerLink="/registerproperty">Add Property</a>
 				</li>
-        
+
 				<li class="nav-item" *ngIf="!currentUser">
-					<a class="nav-link"  routerLink="/login">Login</a>
+					<a class="nav-link" routerLink="/login">Login</a>
 				</li>
 				<li class="nav-item" *ngIf="currentUser">
-					<a class="nav-link"
-						(click)="logout()"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span>Logout</a>
+					<a class="navbar-brand"
+						routerLink="/dashb"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>
+					<a class="nav-link" (click)="logout()">Logout</a>
 				</li>
 			</ul>
 		</div>
