--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
 				</li>
 				<li class="nav-item" *ngIf="currentUser">
 					<a class="navbar-brand"
-						routerLink="/dashb"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>
+						routerLink="/dashboard"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>
 					<a class="nav-link" (click)="logout()">Logout</a>
 				</li>
 			</ul>
