--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,7 +23,9 @@
 				<li class="nav-item">
 					<a class="nav-link" routerLink="/registerproperty">Add Property</a>
 				</li>
-
+<li class="nav-item">
+					<a class="nav-link" routerLink="/dahsboard">Dashboard</a>
+				</li>
 				<li class="nav-item" *ngIf="!currentUser">
 					<a class="nav-link" routerLink="/login">Login</a>
 				</li>
