--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -111,6 +111,20 @@
 			</div>
 		</div>
 		<div class="col-sm-8">
+			<form [formGroup]="searchform" (ngSubmit)="onSubmit()">
+				<div class="form-group">
+					<input type="text" formControlName="search" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.search.errors }" />
+					<div *ngIf="submitted && f.search.errors" class="invalid-feedback">
+						<div *ngIf="f.search.errors.required">Text is required</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<button [disabled]="loading" class="btn btn-primary">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Submit
+        </button>
+				</div>
+			</form>
 			<app-property *ngFor="let property of properties | filter: searchText" [property]="property"
 				[currentuser]="currentLoggedInUser">
 			</app-property>
