--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,20 +14,21 @@
 				<li class="nav-item">
 					<a class="nav-link" routerLink="/registerproperty">Add Property</a>
 				</li>
-        <ng-container *ngIf="!currentUser">
-				<li class="nav-item" >
-					<a class="nav-link" routerLink="/login">Login</a>
-				</li>
-        </ng-container>
-        <ng-container *ngIf="currentUser">
-				<li class="nav-item" >
-					<a class="navbar-brand"
-						routerLink="/dashboard"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>	</li>
-            	<li class="nav-item" >
+				<ng-container *ngIf="!currentUser">
+					<li class="nav-item">
+						<a class="nav-link" routerLink="/login">Login</a>
+					</li>
+				</ng-container>
+				<ng-container *ngIf="currentUser">
+					<li class="nav-item">
+						<a class="navbar-brand"
+							routerLink="/dashboard"><span class="badge badge-primary mr-2">{{currentLoggedInUser}}</span></a>
+					</li>
+					<li class="nav-item">
 
-					<a class="nav-link" (click)="logout()">Logout</a>
-				</li>
-        </ng-container>
+						<a class="nav-link" (click)="logout()">Logout</a>
+					</li>
+				</ng-container>
 			</ul>
 		</div>
 	</div>
