--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -111,19 +111,23 @@
 			</div>
 		</div>
 		<div class="col-sm-8">
-			<form class="form-inline" [formGroup]="searchform" (ngSubmit)="onSubmit()">
-				<div class="form-group">
-					<input type="text" formControlName="search" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.search.errors }" />
-					<div *ngIf="submitted && f.search.errors" class="invalid-feedback">
-						<div *ngIf="f.search.errors.required">Text is required</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<button [disabled]="loading" class="btn btn-primary">Search
+			<div class="card ">
+				<div class="card-body">
+					<form class="form-inline " [formGroup]="searchform" (ngSubmit)="onSubmit()">
+						<div class="form-group mx-2">
+							<input type="text" formControlName="search" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.search.errors }" />
+							<div *ngIf="submitted && f.search.errors" class="invalid-feedback">
+								<div *ngIf="f.search.errors.required">Text is required</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<button [disabled]="loading" class="btn btn-primary">Search
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
         </button>
+						</div>
+					</form>
 				</div>
-			</form>
+			</div>
 			<app-property *ngFor="let property of properties | filter: searchText" [property]="property"
 				[currentuser]="currentLoggedInUser">
 			</app-property>
