--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,20 @@
-<h1> Hello  </h1>
+<div class="container">
+	<div class="row mt-4">
+		<div class="col-sm-4">
+		</div>
+		<div class="col-sm-8">
+			<div class="card mb-2">
+				<div class="card-body">
+					<app-property *ngFor="let property of properties | filter: searchText" [property]="property"
+						[currentuser]="currentLoggedInUser">
+					</app-property>
+					<div class="card" *ngIf="properties.length == 0">
+						<header class="card-header">
+							<h6 class="title text-center">No Data Found</h6>
+						</header>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
