--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 		<div class="col-sm-8">
 			<div class="card mb-2">
 				<div class="card-body">
-					<app-property *ngFor="let property of properties | filter: searchText" [property]="property"
+					<app-property *ngFor="let property of properties" [property]="property"
 						[currentuser]="currentLoggedInUser">
 					</app-property>
 					<div class="card" *ngIf="properties.length == 0">
