--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,1 +1,9 @@
-<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<div class="row">
+	<div class="col">
+		<div id="chartContainer" class="w-100" style="height:400px" ></div>
+	</div>
+	<div class="col">col</div>
+	<div class="w-100"></div>
+	<div class="col">col</div>
+	<div class="col">col</div>
+</div>
