--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col">
-		<div id="chartContainer" class="w-100" style="height:400px" ></div>
+		<div id="chartContainer" class="w-100" style="height:400px;" ></div>
 	</div>
 	<div class="col">col</div>
 	<div class="w-100"></div>
