--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 		<div class="w-100"></div>
-		<div class="col ">
+		<div class="col mb-2">
 			<div class="card">
 				<div class="card-body">
 					<h5 class="card-title">Monthly Property Data</h5>
