--- a/src/app/management/management.component.css
+++ b/src/app/management/management.component.css
@@ -1,2 +1,8 @@
 div#chartContainer1 div a.canvasjs-chart-credit{display:none!important;}
 
+.card-title {
+    border-bottom: 1px solid;
+    padding-bottom: 10px;
+    font-size: 26px;
+    font-weight: 300;
+}
